--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,20 @@
 {
+  "compileOnSave": false,
   "compilerOptions": {
+    "target": "es6",
     "module": "commonjs",
     "moduleResolution": "node",
-    "pretty": true,
-    "sourceMap": true,
-    "target": "es6",
-    "outDir": "./dist",
-    "baseUrl": "src",
     "experimentalDecorators": true,
-    "emitDecoratorMetadata": true
+    "emitDecoratorMetadata": true,
+    "noUnusedLocals": true,
+    "sourceMap": true,
+    "declaration": false,
+    "pretty": true,
+    // "strictNullChecks": true,
+    "skipLibCheck": true,
+    // "outDir": "./dist",
+    // "baseUrl": "src",
+    "strictPropertyInitialization": true
   },
   "include": ["src/**/*.ts", "server.ts"],
   "exclude": ["node_modules"]
